[gd_scene load_steps=15 format=3 uid="uid://drddf4j2gbweq"]

[ext_resource type="Texture2D" uid="uid://b2nler7tmsvhs" path="res://Asset/SpaceStation1.png" id="1_5p6ln"]
[ext_resource type="Script" path="res://main.gd" id="1_7tmd3"]
[ext_resource type="Script" path="res://Station.gd" id="2_oc6wt"]
[ext_resource type="Script" path="res://Launch.gd" id="4_oiuw7"]
[ext_resource type="Script" path="res://Buttons/ContainerSolarPanel.gd" id="5_ree1l"]
[ext_resource type="Script" path="res://Buttons/ContainerBattery.gd" id="5_tsak2"]
[ext_resource type="Script" path="res://Buttons/ContainerComputing.gd" id="6_fswgt"]
[ext_resource type="Script" path="res://Buttons/ContainerLiving.gd" id="6_yq5dq"]
[ext_resource type="Script" path="res://Buttons/ContainerDroneBay.gd" id="8_v88ik"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ws068"]
bg_color = Color(0.239216, 0.239216, 0.239216, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dl7rf"]
texture = ExtResource("1_5p6ln")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_imjuq"]
bg_color = Color(0.231373, 0.384314, 0.956863, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_71ofv"]
bg_color = Color(0.615686, 0.4, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="FontFile" id="FontFile_5ap3r"]
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -2.0
offset_top = -40.0
offset_right = 90.0
offset_bottom = 12.0
script = ExtResource("1_7tmd3")

[node name="PanelStation" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.734
anchor_bottom = 0.734
offset_left = 21.0
offset_top = 62.832
offset_right = 1139.0
offset_bottom = 546.832
theme_override_styles/panel = SubResource("StyleBoxFlat_ws068")
script = ExtResource("2_oc6wt")

[node name="LabelPayload" type="Label" parent="PanelStation"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -389.0
offset_top = 24.0
offset_right = -56.0
offset_bottom = 63.0
theme_override_font_sizes/font_size = 28
text = "Crew and Payload"

[node name="LabelCredits" type="Label" parent="PanelStation/LabelPayload"]
layout_mode = 1
anchors_preset = -1
anchor_top = 6.59
anchor_bottom = 6.59
offset_left = 24.0
offset_top = 257.99
offset_right = 377.0
offset_bottom = 291.99
theme_override_font_sizes/font_size = 24
text = "Credits"

[node name="CountCred" type="Label" parent="PanelStation/LabelPayload/LabelCredits"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.473
anchor_bottom = 0.473
offset_left = 97.0
offset_top = -15.082
offset_right = 304.0
offset_bottom = 18.918
theme_override_font_sizes/font_size = 24
text = "??"
horizontal_alignment = 2

[node name="UnitCred" type="Label" parent="PanelStation/LabelPayload/LabelCredits/CountCred"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.473
anchor_bottom = 0.473
offset_left = 212.826
offset_top = -16.508
offset_right = 244.826
offset_bottom = 17.492
theme_override_font_sizes/font_size = 24
text = "€"
horizontal_alignment = 2

[node name="LabelHumans" type="Label" parent="PanelStation/LabelPayload"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.168
anchor_top = -0.615
anchor_right = 1.168
anchor_bottom = -0.615
offset_left = -388.944
offset_top = 87.985
offset_right = -291.944
offset_bottom = 121.985
theme_override_font_sizes/font_size = 24
text = "Humans"

[node name="CountHumans" type="Label" parent="PanelStation/LabelPayload/LabelHumans"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.473
anchor_bottom = 0.473
offset_left = 145.0
offset_top = -16.082
offset_right = 352.0
offset_bottom = 17.918
theme_override_font_sizes/font_size = 24
text = "??"
horizontal_alignment = 2

[node name="LabelExperiments" type="Label" parent="PanelStation/LabelPayload"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.168
anchor_top = -0.615
anchor_right = 1.168
anchor_bottom = -0.615
offset_left = -388.944
offset_top = 265.985
offset_right = -243.944
offset_bottom = 299.985
theme_override_font_sizes/font_size = 24
text = "Experiments"

[node name="CountExperiments" type="Label" parent="PanelStation/LabelPayload/LabelExperiments"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.473
anchor_bottom = 0.473
offset_left = 145.0
offset_top = -16.082
offset_right = 352.0
offset_bottom = 17.918
theme_override_font_sizes/font_size = 24
text = "??"
horizontal_alignment = 2

[node name="LabelDrones" type="Label" parent="PanelStation/LabelPayload"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.168
anchor_top = -0.615
anchor_right = 1.168
anchor_bottom = -0.615
offset_left = -388.944
offset_top = 143.985
offset_right = -219.944
offset_bottom = 177.985
theme_override_font_sizes/font_size = 24
text = "Mining Drones"

[node name="CountDrones" type="Label" parent="PanelStation/LabelPayload/LabelDrones"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.473
anchor_bottom = 0.473
offset_left = 145.0
offset_top = -16.082
offset_right = 352.0
offset_bottom = 17.918
theme_override_font_sizes/font_size = 24
text = "??"
horizontal_alignment = 2

[node name="Sprite" type="Panel" parent="PanelStation"]
clip_contents = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.005
offset_left = 6.0
offset_top = 33.5
offset_right = 262.41
offset_bottom = 295.5
theme_override_styles/panel = SubResource("StyleBoxTexture_dl7rf")

[node name="PanelEnergy" type="Panel" parent="PanelStation"]
layout_mode = 1
anchors_preset = -1
offset_left = 286.0
offset_top = 73.0
offset_right = 628.0
offset_bottom = 202.0
theme_override_styles/panel = SubResource("StyleBoxFlat_imjuq")

[node name="LabelEnergy" type="Label" parent="PanelStation/PanelEnergy"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.244
anchor_bottom = 0.244
offset_left = 13.0
offset_top = -16.96
offset_right = 91.0
offset_bottom = 17.04
theme_override_font_sizes/font_size = 24
text = "Power"

[node name="CountPower" type="Label" parent="PanelStation/PanelEnergy/LabelEnergy"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.473
anchor_bottom = 0.473
offset_left = 94.0
offset_top = -15.598
offset_right = 256.0
offset_bottom = 18.402
theme_override_font_sizes/font_size = 24
text = "??"
horizontal_alignment = 2

[node name="UnitPower" type="Label" parent="PanelStation/PanelEnergy/LabelEnergy/CountPower"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.473
anchor_bottom = 0.473
offset_left = 179.0
offset_top = -14.082
offset_right = 227.0
offset_bottom = 19.918
theme_override_font_sizes/font_size = 22
text = "kWp"
horizontal_alignment = 2

[node name="LabelConsumption" type="Label" parent="PanelStation/PanelEnergy"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.244
anchor_bottom = 0.244
offset_left = 13.0
offset_top = 17.524
offset_right = 169.0
offset_bottom = 51.524
theme_override_font_sizes/font_size = 24
text = "Consumption"

[node name="CountConsumption" type="Label" parent="PanelStation/PanelEnergy/LabelConsumption"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.473
anchor_bottom = 0.473
offset_left = 94.0
offset_top = -15.598
offset_right = 256.0
offset_bottom = 18.402
theme_override_font_sizes/font_size = 24
text = "??"
horizontal_alignment = 2

[node name="UnitConsumption" type="Label" parent="PanelStation/PanelEnergy/LabelConsumption/CountConsumption"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.473
anchor_bottom = 0.473
offset_left = 179.0
offset_top = -14.082
offset_right = 227.0
offset_bottom = 19.918
theme_override_font_sizes/font_size = 22
text = "kW
"

[node name="ProgressBar" type="ProgressBar" parent="PanelStation/PanelEnergy"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 13.0
offset_top = 86.0
offset_right = 332.0
offset_bottom = 113.0
value = 32.0
show_percentage = false

[node name="UnitEnergy" type="Label" parent="PanelStation/PanelEnergy/ProgressBar"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.473
anchor_bottom = 0.473
offset_left = 266.0
offset_top = -12.771
offset_right = 317.0
offset_bottom = 15.229
theme_override_font_sizes/font_size = 20
text = "kWh"
horizontal_alignment = 2

[node name="CountEnergy" type="Label" parent="PanelStation/PanelEnergy/ProgressBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.473
anchor_bottom = 0.473
offset_left = 81.0
offset_top = -12.771
offset_right = 258.0
offset_bottom = 15.229
theme_override_font_sizes/font_size = 20
text = "??/??"
horizontal_alignment = 2

[node name="PanelMatter" type="Panel" parent="PanelStation"]
layout_mode = 1
anchors_preset = -1
offset_left = 289.0
offset_top = 210.0
offset_right = 631.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_71ofv")

[node name="LabelMatter" type="Label" parent="PanelStation/PanelMatter"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.244
anchor_bottom = 0.244
offset_left = 13.0
offset_top = -16.96
offset_right = 91.0
offset_bottom = 17.04
theme_override_font_sizes/font_size = 24
text = "Matter
"

[node name="CountMatterTransf" type="Label" parent="PanelStation/PanelMatter"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.827
anchor_top = -2.333
anchor_right = -0.827
anchor_bottom = -2.333
offset_left = 386.834
offset_top = 215.97
offset_right = 540.834
offset_bottom = 249.97
theme_override_font_sizes/font_size = 24
text = "??"
horizontal_alignment = 2

[node name="UnitMatterTransf" type="Label" parent="PanelStation/PanelMatter/CountMatterTransf"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.473
anchor_bottom = 0.473
offset_left = 166.0
offset_top = -15.802
offset_right = 225.0
offset_bottom = 18.198
theme_override_font_sizes/font_size = 22
text = "Kg/d"
horizontal_alignment = 2

[node name="CountMatter" type="Label" parent="PanelStation/PanelMatter"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.473
anchor_bottom = 0.473
offset_left = 104.0
offset_top = -1.56999
offset_right = 258.0
offset_bottom = 32.43
theme_override_font_sizes/font_size = 24
text = "??"
horizontal_alignment = 2

[node name="UnitMatter" type="Label" parent="PanelStation/PanelMatter/CountMatter"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.473
anchor_bottom = 0.473
offset_left = 172.0
offset_top = -17.082
offset_right = 221.0
offset_bottom = 16.918
theme_override_font_sizes/font_size = 22
text = "ton"
horizontal_alignment = 2

[node name="LabelStation" type="Label" parent="PanelStation"]
layout_mode = 1
anchors_preset = -1
offset_left = 289.0
offset_top = 24.0
offset_right = 622.0
offset_bottom = 63.0
theme_override_font_sizes/font_size = 28
text = "Composite Space Station"

[node name="ModuleBuild" type="Control" parent="PanelStation"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ContainerSolarPanel" type="HBoxContainer" parent="PanelStation/ModuleBuild"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 31.0
offset_top = 319.0
offset_right = 238.0
offset_bottom = 358.0
script = ExtResource("5_ree1l")

[node name="CountSolar" type="Label" parent="PanelStation/ModuleBuild/ContainerSolarPanel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "??"

[node name="ContainerSolarButton" type="VBoxContainer" parent="PanelStation/ModuleBuild/ContainerSolarPanel"]
layout_mode = 2
size_flags_horizontal = 0

[node name="BuildSolar" type="Button" parent="PanelStation/ModuleBuild/ContainerSolarPanel/ContainerSolarButton"]
layout_mode = 2
text = "Build Solar Array Wing"

[node name="ProgressSolar" type="ProgressBar" parent="PanelStation/ModuleBuild/ContainerSolarPanel/ContainerSolarButton"]
layout_mode = 2
max_value = 14.0
show_percentage = false

[node name="ContainerBattery" type="HBoxContainer" parent="PanelStation/ModuleBuild"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 268.0
offset_top = 319.0
offset_right = 475.0
offset_bottom = 358.0
script = ExtResource("5_tsak2")

[node name="CountBattery" type="Label" parent="PanelStation/ModuleBuild/ContainerBattery"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "??"

[node name="ContainerBatteryButton" type="VBoxContainer" parent="PanelStation/ModuleBuild/ContainerBattery"]
layout_mode = 2
size_flags_horizontal = 0

[node name="BuildBattery" type="Button" parent="PanelStation/ModuleBuild/ContainerBattery/ContainerBatteryButton"]
layout_mode = 2
text = "Build Battery Stack"

[node name="ProgressBattery" type="ProgressBar" parent="PanelStation/ModuleBuild/ContainerBattery/ContainerBatteryButton"]
layout_mode = 2
max_value = 14.0
show_percentage = false

[node name="ContainerLiving" type="HBoxContainer" parent="PanelStation/ModuleBuild"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 479.0
offset_top = 319.0
offset_right = 686.0
offset_bottom = 358.0
script = ExtResource("6_yq5dq")

[node name="CountLiving" type="Label" parent="PanelStation/ModuleBuild/ContainerLiving"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "??"

[node name="ContainerLivingButton" type="VBoxContainer" parent="PanelStation/ModuleBuild/ContainerLiving"]
layout_mode = 2
size_flags_horizontal = 0

[node name="BuildLiving" type="Button" parent="PanelStation/ModuleBuild/ContainerLiving/ContainerLivingButton"]
layout_mode = 2
text = "Build Living Quarters"

[node name="ProgressLiving" type="ProgressBar" parent="PanelStation/ModuleBuild/ContainerLiving/ContainerLivingButton"]
layout_mode = 2
max_value = 14.0
show_percentage = false

[node name="ContainerComputing" type="HBoxContainer" parent="PanelStation/ModuleBuild"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 714.0
offset_top = 319.0
offset_right = 921.0
offset_bottom = 358.0
script = ExtResource("6_fswgt")

[node name="CountComputing" type="Label" parent="PanelStation/ModuleBuild/ContainerComputing"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "??"

[node name="ContainerComputingButton" type="VBoxContainer" parent="PanelStation/ModuleBuild/ContainerComputing"]
layout_mode = 2
size_flags_horizontal = 0

[node name="BuildSolar" type="Button" parent="PanelStation/ModuleBuild/ContainerComputing/ContainerComputingButton"]
layout_mode = 2
text = "Build Data Center"

[node name="ProgressSolar" type="ProgressBar" parent="PanelStation/ModuleBuild/ContainerComputing/ContainerComputingButton"]
layout_mode = 2
max_value = 14.0
show_percentage = false

[node name="ContainerDroneBay" type="HBoxContainer" parent="PanelStation/ModuleBuild"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 31.0
offset_top = 368.0
offset_right = 247.0
offset_bottom = 407.0
script = ExtResource("8_v88ik")

[node name="CountDroneBay" type="Label" parent="PanelStation/ModuleBuild/ContainerDroneBay"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "??"

[node name="ContainerDroneButton" type="VBoxContainer" parent="PanelStation/ModuleBuild/ContainerDroneBay"]
layout_mode = 2
size_flags_horizontal = 0

[node name="BuildDroneBay" type="Button" parent="PanelStation/ModuleBuild/ContainerDroneBay/ContainerDroneButton"]
layout_mode = 2
text = "Build Drone Bay"

[node name="ProgressDroneBay" type="ProgressBar" parent="PanelStation/ModuleBuild/ContainerDroneBay/ContainerDroneButton"]
layout_mode = 2
max_value = 14.0
show_percentage = false

[node name="LabelDays" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 12.545
anchor_top = 0.8
anchor_right = 12.545
anchor_bottom = 0.8
offset_left = -393.14
offset_top = 14.4
offset_right = -240.14
offset_bottom = 48.4
theme_override_font_sizes/font_size = 24
text = "Days Elapsed"

[node name="CountDays" type="Label" parent="LabelDays"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.473
anchor_bottom = 0.473
offset_left = 168.0
offset_top = -16.082
offset_right = 352.0
offset_bottom = 17.918
theme_override_font_sizes/font_size = 24
text = "??"
horizontal_alignment = 2

[node name="Launch" type="Control" parent="."]
anchors_preset = 0
offset_left = 918.0
offset_top = 56.0
offset_right = 958.0
offset_bottom = 96.0
script = ExtResource("4_oiuw7")

[node name="ContainerLaunchH" type="VBoxContainer" parent="Launch"]
layout_mode = 2
offset_left = -611.0
offset_top = 541.0
offset_right = -349.0
offset_bottom = 580.0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="LaunchHumans" type="Button" parent="Launch/ContainerLaunchH"]
layout_mode = 2
text = "Launch Humans"

[node name="ProgressLaunchH" type="ProgressBar" parent="Launch/ContainerLaunchH"]
unique_name_in_owner = true
layout_mode = 2
max_value = 14.0
show_percentage = false

[node name="ContainerLaunchM" type="VBoxContainer" parent="Launch"]
layout_mode = 2
offset_left = -897.0
offset_top = 541.0
offset_right = -635.0
offset_bottom = 615.0
size_flags_horizontal = 0

[node name="LaunchMatter" type="Button" parent="Launch/ContainerLaunchM"]
show_behind_parent = true
layout_mode = 2
text = "Launch Matter"

[node name="ProgressLaunchM" type="ProgressBar" parent="Launch/ContainerLaunchM"]
unique_name_in_owner = true
layout_mode = 2
max_value = 7.0
show_percentage = false

[node name="BoxLaunchM" type="SpinBox" parent="Launch/ContainerLaunchM"]
unique_name_in_owner = true
layout_mode = 2
step = 0.1

[node name="ContainerBuildDrone" type="VBoxContainer" parent="Launch"]
unique_name_in_owner = true
offset_left = -325.0
offset_top = 541.0
offset_right = -63.0
offset_bottom = 580.0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="BuildMiningDrone" type="Button" parent="Launch/ContainerBuildDrone"]
layout_mode = 2
text = "Bulid Mining Drone"

[node name="ProgressBuildMD" type="ProgressBar" parent="Launch/ContainerBuildDrone"]
layout_mode = 2
max_value = 14.0
show_percentage = false

[node name="TabBar" type="TabBar" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 21.0
offset_top = 52.0
offset_right = 229.0
offset_bottom = 94.0
theme_override_fonts/font = SubResource("FontFile_5ap3r")
theme_override_font_sizes/font_size = 24
tab_count = 4
current_tab = 1
tab_0/title = "⏸"
tab_1/title = "▶"
tab_2/title = "⏩"
tab_3/title = "⏭"

[connection signal="pressed" from="PanelStation/ModuleBuild/ContainerSolarPanel/ContainerSolarButton/BuildSolar" to="PanelStation/ModuleBuild/ContainerSolarPanel" method="_on_build_pressed"]
[connection signal="pressed" from="PanelStation/ModuleBuild/ContainerBattery/ContainerBatteryButton/BuildBattery" to="PanelStation/ModuleBuild/ContainerBattery" method="_on_build_pressed"]
[connection signal="pressed" from="PanelStation/ModuleBuild/ContainerLiving/ContainerLivingButton/BuildLiving" to="PanelStation/ModuleBuild/ContainerLiving" method="_on_build_pressed"]
[connection signal="pressed" from="PanelStation/ModuleBuild/ContainerComputing/ContainerComputingButton/BuildSolar" to="PanelStation/ModuleBuild/ContainerComputing" method="_on_build_pressed"]
[connection signal="pressed" from="PanelStation/ModuleBuild/ContainerDroneBay/ContainerDroneButton/BuildDroneBay" to="PanelStation/ModuleBuild/ContainerDroneBay" method="_on_build_pressed"]
[connection signal="pressed" from="Launch/ContainerLaunchH/LaunchHumans" to="Launch" method="_on_launch_humans_pressed"]
[connection signal="pressed" from="Launch/ContainerLaunchM/LaunchMatter" to="Launch" method="_on_launch_matter_pressed"]
[connection signal="pressed" from="Launch/ContainerBuildDrone/BuildMiningDrone" to="Launch" method="_on_launch_humans_pressed"]
